[tool.poetry]
name = "uw-design-class"
version = "0.1.0"
description = ""
authors = ["jmontoro <jose.m.montoro.88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
async-exit-stack = "^1.0.1"
pydantic = "^2.8.2"
pytest = "^8.3.2"
httpx = "^0.27.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
